chore: use java 15 with preview enabled