@@ -24,6 +24,9 @@
                 <version>3.8.0</version>
                 <configuration>
                     <release>15</release>
+                    <source>15</source>
+                    <target>15</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
